mise à jour projets + intégration de OgCard

--- a/src/app/work/projects/site-multilingue-headless-h2team.mdx
+++ b/src/app/work/projects/site-multilingue-headless-h2team.mdx
@@ -16,40 +16,62 @@ team:
     role: "Ingénierie Hydrogène"
     avatar: "/images/projects/h2team/h2team.png"
     linkedIn: "https://www.h2team.fr"
+projectURL: "https://www.h2team.fr"
 ---
 
-## Vue d’ensemble
+## ✨ Projet : Site vitrine multilingue pour H2team
 
-Création d'un site vitrine multilingue pour H2team, une entreprise spécialisée dans l'ingénierie hydrogène. Le projet a été réalisé en utilisant Next.js pour le front-end et WordPress comme CMS headless.
+Développement d’un site vitrine moderne et performant pour **H2team**, entreprise spécialisée dans l'ingénierie hydrogène.
+Le projet combine **Next.js** pour le front-end et **WordPress** en mode *headless* pour la gestion de contenu.
 
-## Points clés
+---
 
-- **Multilingue**: Mise en place d'un site multilingue avec Next.js, permettant une expérience utilisateur fluide dans plusieurs langues.
-- **Headless CMS**: Utilisation de WordPress comme CMS headless, offrant une flexibilité maximale pour la gestion des contenus.
-- **Performance**: Optimisation des performances du site grâce à la pré-génération de pages statiques et au rendu côté serveur de Next.js.
-- **SEO**: Mise en œuvre de bonnes pratiques SEO pour améliorer la visibilité du site sur les moteurs de recherche.
-- **Accessibilité**: Respect des normes d'accessibilité pour garantir une expérience utilisateur optimale pour tous.
-- **Responsive Design**: Création d'une interface utilisateur réactive et moderne, adaptée à tous les appareils.
-- **Sécurité**: Renforcement de la sécurité du site en isolant l'interface d'administration WordPress du public.
-- **Collaboration**: Collaboration étroite avec l'équipe de design pour assurer une cohérence visuelle et fonctionnelle entre le front-end et le back-end.
-- **Scalabilité**: Architecture évolutive permettant d'ajouter facilement de nouvelles fonctionnalités et de gérer une augmentation du trafic.
-- **Optimisation des images**: Utilisation de Next.js pour optimiser les images, garantissant des temps de chargement rapides et une meilleure expérience utilisateur.
+## 🎯 Objectifs
 
+* Créer une **plateforme multilingue** fluide et accessible
+* Mettre en avant les services de l’entreprise avec un **design professionnel**
+* Offrir une **architecture évolutive** et facile à maintenir
+* Garantir **rapidité, sécurité et visibilité SEO**
 
-## Technologies utilisées
+---
 
-- **Next.js**: Framework React pour le rendu côté serveur et la génération de sites statiques.
-- **WordPress**: CMS headless pour la gestion des contenus.
-- **GraphQL**: Utilisé pour interroger les données de WordPress de manière flexible et efficace.
-- **Tailwind CSS**: Pour le design réactif et moderne.
-- **Vercel**: Pour le déploiement et l'hébergement du site Next.js.
-- **i18next**: Pour la gestion de la traduction et du contenu multilingue.
+## 🧩 Fonctionnalités clés
 
 
-## Défis rencontrés
+* **Multilingue** : Navigation fluide entre plusieurs langues avec *i18next*
+* **CMS headless** : Contenus gérés via *WordPress* pour plus de flexibilité
+* **Performances** : Pages pré-générées avec *Next.js* pour des chargements ultra-rapides
+* **SEO-friendly** : Optimisation technique et sémantique
+* **Responsive** : Interface parfaitement adaptée aux mobiles et tablettes
+* **Accessibilité** : Conformité aux bonnes pratiques d’inclusion
+* **Sécurité** : Back-office WordPress isolé pour limiter les failles
+* **Scalabilité** : Architecture pensée pour évoluer avec le projet
+* **Optimisation des images** : Chargement rapide et formats adaptés
 
-Le principal défi a été de garantir une intégration fluide entre Next.js et WordPress, en particulier lors de la gestion des contenus multilingues. La mise en place d'une API GraphQL a permis de simplifier les requêtes et d'optimiser les performances. De plus, la création d'un design réactif et moderne a nécessité une collaboration étroite avec l'équipe de design pour s'assurer que le site soit à la fois esthétique et fonctionnel.
+---
 
-## Résultats
+## ⚙️ Stack technique
 
-Le site vitrine multilingue a été lancé avec succès, offrant une expérience utilisateur fluide et rapide. Grâce à l'utilisation de Next.js et WordPress, le site est facilement extensible et peut être mis à jour rapidement. Les performances du site ont été optimisées, avec des temps de chargement rapides et un bon référencement naturel. L'architecture headless permet également une gestion efficace des contenus, facilitant la collaboration entre les équipes de développement et de design.
+* **Next.js** — Framework React pour un rendu hybride performant
+* **WordPress (headless)** — Gestion centralisée du contenu
+* **GraphQL** — Requêtes souples et performantes
+* **Tailwind CSS** — Design moderne et responsive
+* **Vercel** — Déploiement simple et rapide
+* **i18next** — Internationalisation du site
+
+---
+
+## ⚡ Défis relevés
+
+L’un des principaux enjeux a été d'assurer une **intégration fluide entre Next.js et WordPress**, notamment pour la gestion du multilingue.
+Grâce à **GraphQL**, les requêtes de contenu ont été optimisées, et la collaboration étroite avec l’équipe design a permis d’aligner **fonctionnalité et esthétique**.
+
+---
+
+## ✅ Résultat
+
+Le site a été **déployé avec succès**, proposant une **expérience multilingue rapide, intuitive et sécurisée**.
+L’architecture headless offre une **gestion agile du contenu**, tout en garantissant **performances et évolutivité** à long terme.
+Ce projet illustre ma capacité à allier **technique, design et sensibilité aux besoins clients** dans des réalisations web sur mesure.
+
+
