--- a/src/app/work/projects/site-portfolio-sculture.mdx
+++ b/src/app/work/projects/site-portfolio-sculture.mdx
@@ -16,33 +16,50 @@ team:
     role: "Sculptrice"
     avatar: "/images/projects/louhenix/louhenix.png"
     linkedIn: "https://www.sculpture-louhenix.fr"
+projectURL: "https://www.sculpture-louhenix.fr"
+---
+## ✨ Projet : Site vitrine pour Lou Henix
+
+Création d’un site vitrine pour **Lou Henix**, sculptrice contemporaine, mettant en valeur son univers artistique.
+Le site a été conçu avec **Next.js** pour offrir une expérience fluide, moderne et responsive.
+
 ---
 
-## Vue d’ensemble
-Création d'un site vitrine pour Lou henix, une sculptrice talentueuse. Le projet a été réalisé en utilisant Next.js. Le site met en avant ses œuvres et son parcours artistique, tout en offrant une expérience utilisateur fluide et moderne.
+## 🎯 Objectifs
 
-## Contexte
-Le site a été conçu pour présenter le travail de Lou henix, en mettant l'accent sur ses sculptures et son approche artistique. L'objectif était de créer une plateforme qui reflète son style unique tout en étant facile à naviguer pour les visiteurs.
+* Mettre en avant les œuvres et le parcours de l’artiste
+* Proposer une navigation claire et immersive
+* Refléter l’esthétique et la sensibilité de Lou Henix à travers le design
 
-## Points clés
+---
 
-- **Design moderne**: Utilisation de Next.js et de Motion pour créer une interface utilisateur dynamique et engageante.
-- **Responsive**: Le site est entièrement réactif, garantissant une expérience utilisateur optimale sur tous les appareils.
-- **Accessibilité**: Respect des normes d'accessibilité pour garantir que le site soit utilisable par tous.
-- **SEO optimisé**: Mise en œuvre de bonnes pratiques SEO pour améliorer la visibilité du site sur les moteurs de recherche.
+## 🧩 Fonctionnalités clés
 
-## Technologies utilisées
+* **Design soigné** avec animations fluides grâce à *Framer Motion*
+* **Responsive design** pour une accessibilité optimale sur tous les écrans
+* **SEO-friendly** pour une meilleure visibilité en ligne
+* **Accessibilité** conforme aux standards web
 
-- **Next.js**: Framework React pour le rendu côté serveur et la génération de sites statiques.
-- **Tailwind CSS**: Pour le design réactif et moderne.
-- **Vercel**: Pour le déploiement et l'hébergement du site Next.js.
-- **motion**: Pour les animations et les transitions fluides.
+---
 
-## Défis rencontrés
+## ⚙️ Stack technique
 
-Le principal défi a été de créer un design qui reflète le style artistique de Lou henix tout en garantissant une navigation fluide et intuitive. L'utilisation de Motion a permis d'ajouter des animations engageantes, mais cela a nécessité une attention particulière pour s'assurer que les performances du site ne soient pas affectées.
+* **Next.js** — Framework React orienté performance
+* **Tailwind CSS** — Design responsive et rapide à mettre en place
+* **Framer Motion** — Animations modernes et naturelles
+* **PostGresQL** — Base de données pour la gestion des contenus
+* **Vercel** — Déploiement et hébergement du site
 
+---
 
-## Résultats
+## ⚡ Défis relevés
 
-Le site vitrine a été lancé avec succès et a reçu des retours positifs de la part de Lou henix et de ses visiteurs. Grâce à l'utilisation de Next.js et Motion, le site offre une expérience utilisateur moderne et engageante, tout en mettant en avant le travail artistique de Lou henix.
+Traduire le style artistique de Lou Henix dans une interface web cohérente a été un enjeu majeur.
+L’équilibre entre **esthétique, performance et ergonomie** a guidé l’ensemble des choix techniques et graphiques.
+
+---
+
+## ✅ Résultat
+
+Un site vitrine élégant, performant et aligné avec l’univers de l’artiste, qui a reçu des retours très positifs.
+Ce projet illustre ma capacité à allier **design, technique et sensibilité artistique** dans des réalisations web sur mesure.
