améliorations prise de rendez-vous

--- a/src/app/blog/posts/headless.mdx
+++ b/src/app/blog/posts/headless.mdx
@@ -3,7 +3,7 @@ title: "Créer un site Headless avec WordPress et Next.js"
 summary: "Pourquoi et comment utiliser WordPress comme CMS headless avec Next.js pour un site rapide, sécurisé et moderne."
 image: "/images/blog/headless.jpg"
 publishedAt: "2025-05-13"
-tag: "Wordpress Next.js Headless"
+tag: "Wordpress, Next.js, Headless"
 ---
 
 ## 🎯 Pourquoi choisir un WordPress «headless» avec Next.js ?
