--- a/src/app/blog/posts/accessibilite-et-reglementations-europeene.mdx
+++ b/src/app/blog/posts/accessibilite-et-reglementations-europeene.mdx
@@ -66,20 +66,20 @@ L'accessibilité numérique n'est pas seulement une obligation légale, mais un 
 
 ## 📚 Sources
 <Grid fillWidth columns="2" gap="16" className="mt-8">
-<OgCard url="https://www.insuit.net/fr/loi-europeenne-sur-laccessibilite/?utm_source=chatgpt.com" />
+<OgCard url="https://www.insuit.net/fr/loi-europeenne-sur-laccessibilite" />
 
-<OgCard url="https://commission.europa.eu/strategy-and-policy/policies/justice-and-fundamental-rights/disability/union-equality-strategy-rights-persons-disabilities-2021-2030/european-accessibility-act_en?utm_source=chatgpt.com" />
+<OgCard url="https://commission.europa.eu/strategy-and-policy/policies/justice-and-fundamental-rights/disability/union-equality-strategy-rights-persons-disabilities-2021-2030/european-accessibility-act_en" />
 
-<OgCard url="https://www.cmswire.com/digital-experience/what-digital-experience-leaders-need-to-know-about-the-european-accessibility-act/?utm_source=chatgpt.com"/>
+<OgCard url="https://www.cmswire.com/digital-experience/what-digital-experience-leaders-need-to-know-about-the-european-accessibility-act"/>
 
-<OgCard url="https://www.ft.com/content/3c877c55-b698-43da-a222-8ae183f53078?utm_source=chatgpt.com"/>
+<OgCard url="https://www.ft.com/content/3c877c55-b698-43da-a222-8ae183f53078"/>
 
-<OgCard url="https://fr.wikipedia.org/wiki/Accessibilit%C3%A9_num%C3%A9rique?utm_source=chatgpt.com"/>
+<OgCard url="https://fr.wikipedia.org/wiki/Accessibilit%C3%A9_num%C3%A9rique"/>
 
-<OgCard url="https://digital-strategy.ec.europa.eu/fr/policies/web-accessibility?utm_source=chatgpt.com"/>
+<OgCard url="https://digital-strategy.ec.europa.eu/fr/policies/web-accessibility"/>
 
-<OgCard url="https://www.wcag.com/compliance/european-accessibility-act/?utm_source=chatgpt.com"/>
+<OgCard url="https://www.wcag.com/compliance/european-accessibility-act"/>
 
-<OgCard url="https://eur-lex.europa.eu/FR/legal-content/glossary/web-accessibility.html?utm_source=chatgpt.com"/>
+<OgCard url="https://eur-lex.europa.eu/FR/legal-content/glossary/web-accessibility.html"/>
 
 </Grid>
