og image with params

--- a/src/app/work/projects/plateforme-introduction-aux-technologies-du-web.mdx
+++ b/src/app/work/projects/plateforme-introduction-aux-technologies-du-web.mdx
@@ -2,6 +2,7 @@
 title: "Introduction aux technologies du web – Plateforme pédagogique pour Licence 3"
 publishedAt: "2025-05-22"
 summary: "Développement d'une plateforme de cours interactive pour les étudiants de Licence 3 à l'Université Champollion, axée sur les technologies modernes du web."
+image: "/images/projects/tw3-champollion/cover-01.png"
 images:
   - "/images/projects/tw3-champollion/cover-01.png"
   - "/images/projects/tw3-champollion/cover-02.png"
