--- a/src/app/work/projects/site-multilingue-headless-h2team.mdx
+++ b/src/app/work/projects/site-multilingue-headless-h2team.mdx
@@ -2,6 +2,7 @@
 title: "Création d'un site vitrine multilingue avec Next.js et WordPress"
 publishedAt: "2025-01-08"
 summary: "Développement d'un site headless multilingue avec next.js et wordpress."
+image: "/images/projects/h2team/cover-01.png"
 images:
   - "/images/projects/h2team/cover-01.png"
   - "/images/projects/h2team/cover-02.png"
