--- a/src/app/work/projects/site-portfolio-sculture.mdx
+++ b/src/app/work/projects/site-portfolio-sculture.mdx
@@ -2,6 +2,7 @@
 title: "Création d'un portfolio pour Lou Henix avec Next.js et Motion"
 publishedAt: "2024-01-08"
 summary: "Création du design et du site avec nextjs et motion (anciennement framer-motion)."
+image: "/images/projects/louhenix/cover-01.png"
 images:
   - "/images/projects/louhenix/cover-01.png"
   - "/images/projects/louhenix/cover-02.png"
